--- a/MyPad/Properties/Resources.en-US.resx
+++ b/MyPad/Properties/Resources.en-US.resx
@@ -810,4 +810,13 @@ Please check and delete unnecessary files.</value>
   <data name="Label_PomodoroDuration" xml:space="preserve">
     <value>Pomodoro duration</value>
   </data>
+  <data name="Label_Large" xml:space="preserve">
+    <value>Large</value>
+  </data>
+  <data name="Label_Small" xml:space="preserve">
+    <value>Small</value>
+  </data>
+  <data name="Label_UISize" xml:space="preserve">
+    <value>UI size</value>
+  </data>
 </root>
