[update] UIサイズの変更にアイコンサイズを追従させるように変更

--- a/MyPad/Properties/Resources.resx
+++ b/MyPad/Properties/Resources.resx
@@ -859,4 +859,7 @@
   <data name="Label_UISize" xml:space="preserve">
     <value>UI サイズ</value>
   </data>
+  <data name="Label_Medium" xml:space="preserve">
+    <value>ふつう</value>
+  </data>
 </root>
