--- a/MyPad/Properties/Resources.en-US.resx
+++ b/MyPad/Properties/Resources.en-US.resx
@@ -819,4 +819,7 @@ Please check and delete unnecessary files.</value>
   <data name="Label_UISize" xml:space="preserve">
     <value>UI size</value>
   </data>
+  <data name="Label_Medium" xml:space="preserve">
+    <value>Medium</value>
+  </data>
 </root>
