--- a/MyPad/Properties/Resources.resx
+++ b/MyPad/Properties/Resources.resx
@@ -598,7 +598,7 @@
     <value>メニューバーを表示する。</value>
   </data>
   <data name="LabelText_ShowSingleTab" xml:space="preserve">
-    <value>単一タブを表示する。</value>
+    <value>タブが一つのみの場合もタブバーを表示する。</value>
   </data>
   <data name="LabelText_ShowSpaces" xml:space="preserve">
     <value>スペースを表示する。</value>
