--- a/MyPad/Properties/Resources.en-US.resx
+++ b/MyPad/Properties/Resources.en-US.resx
@@ -837,4 +837,7 @@ Please check and delete unnecessary files.</value>
   <data name="Label_AccentColor" xml:space="preserve">
     <value>Accent color</value>
   </data>
+  <data name="LabelText_EnabledHalfWidth" xml:space="preserve">
+    <value>Enable half East Asian Widths.</value>
+  </data>
 </root>
