[update] 等幅半角字形が有効な場合に、スラッシュ付きのゼロを表示する機能を追加

--- a/MyPad/Properties/Resources.en-US.resx
+++ b/MyPad/Properties/Resources.en-US.resx
@@ -840,4 +840,7 @@ Please check and delete unnecessary files.</value>
   <data name="LabelText_EnableHalfWidth" xml:space="preserve">
     <value>Enable half East Asian Widths.</value>
   </data>
+  <data name="LabelText_EnableSlashedZero" xml:space="preserve">
+    <value>Enable zero fonts to be replaced with slashed zero if possible.</value>
+  </data>
 </root>
