--- a/MyPad/Properties/Resources.resx
+++ b/MyPad/Properties/Resources.resx
@@ -460,8 +460,8 @@
   <data name="Label_Size" xml:space="preserve">
     <value>サイズ</value>
   </data>
-  <data name="Label_Syntax" xml:space="preserve">
-    <value>シンタックス</value>
+  <data name="Label_SyntaxColoring" xml:space="preserve">
+    <value>シンタックス カラーリング</value>
   </data>
   <data name="Label_System" xml:space="preserve">
     <value>システム</value>
@@ -856,9 +856,6 @@
   <data name="Label_Small" xml:space="preserve">
     <value>小さい</value>
   </data>
-  <data name="Label_UISize" xml:space="preserve">
-    <value>UI サイズ</value>
-  </data>
   <data name="Label_Medium" xml:space="preserve">
     <value>ふつう</value>
   </data>
@@ -882,5 +879,14 @@
   </data>
   <data name="LabelText_EnableSlashedZero" xml:space="preserve">
     <value>可能であればスラッシュ付きのゼロを表示する。</value>
+  </data>
+  <data name="Label_Behavior" xml:space="preserve">
+    <value>動作</value>
+  </data>
+  <data name="Label_Appearance" xml:space="preserve">
+    <value>外観</value>
+  </data>
+  <data name="Message_NotifyAppearanceWarning" xml:space="preserve">
+    <value>一部の画面要素にはこれらの設定が反映されません。</value>
   </data>
 </root>
